--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "shareqr"
-version = "0.0.1"
+version = "0.0.2"
 authors = [
   { name="Aniruth Karthik", email="aniruthkarthik10@gmail.com" },
 ]
@@ -12,8 +12,16 @@ description = "A simple tool to share files from the command line via a QR code.
 readme = "README.md"
 requires-python = ">=3.7"
 license = "MIT"
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: Console",
+    "Intended Audience :: Developers",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Topic :: Utilities",
+]
 dependencies = [
-    "qrcode",
+    "qrcode[pil]",
 ]
 
 [project.urls]
