--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "qrtunnel"
-version = "2.1.2"
-description = "Cross-platform file sharing via QR code with ngrok and SSH tunneling"
+version = "2.2.0"
+description = "Cross-platform file sharing via QR code. Defaults to account-free SSH tunneling on Linux/macOS."
 readme = "README.md"
 requires-python = ">=3.6"
 license = {text = "MIT"}
